# graphene-subscriptions

./: CHANGELOG.md  README.md  pyproject.toml
_graphene_subscriptions/: consumers.py  signals.py
graphene_subcriptions/: apps.py  consumers.py  events.py  signals.py  typings.py  utils.py
graphene_subscriptions/: consumers.py  events.py  signals.py  utils.py
tests/: django_settings.py  schema.py  test_model_subscriptions.py  test_subscriptions.py
