[project]
name = "graphene_subscriptions"
description = "A plug-and-play GraphQL subscription implementation for Graphene + Django built using Django Channels."
version = "1.0.0-alpha.0"
requires-python = ">=3.6"
readme = "README.md"
license = "MIT"
keywords = ["graphql", "subscriptions", "django", "channels", "graphene"]
authors = [
    {name = "Jayden Windle", email = "jaydenwindle@gmail.com"},
    {name = "John Pendenque", email = "pendenquejohn@gmail.com"}
]
maintainers = [
    {name = "John Pendenque", email = "pendenquejohn@gmail.com"}
]
classifiers = [
    'Environment :: Web Environment',
    'Framework :: Django',
    'Framework :: Django :: 5',
    'Framework :: Django :: 6',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.14',
    'Programming Language :: Python :: 3.15',
    'Topic :: Internet :: WWW/HTTP',
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
]

[project.urls]
homepage = "https://github.com/jaydenwindle/graphene-subscriptions"
documentation = "https://github.com/Zadigo/kryptone/wiki"
repository = "https://github.com/jaydenwindle/graphene-subscriptions"
changelog = "https://github.com/Zadigo/kryptone/blob/main/CHANGELOG.md"

[tool.poetry]


[tool.poetry.dependencies]
python = ">=3.6"
django = ">=1.11"
channels = "^2.3"
graphene-django = "^2.7"

[tool.poetry.dev-dependencies]
pytest = "^5.3"
pytest-asyncio = "^0.10.0"
pytest-django = "^3.7"
pytest-emoji = "^0.2.0"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
twine = "^3.1"
tox = "^3.14"

[build-system]
requires = ["poetry>=2.3.0"]
build-backend = "poetry.masonry.api"
