[project]
name = "graphene_subscriptions"
description = "A plug-and-play GraphQL subscription implementation for Graphene + Django built using Django Channels."
version = "1.0.0-alpha.0"
requires-python = ">=3.14"
readme = "README.md"
license = "MIT"
keywords = ["graphql", "subscriptions", "django", "channels", "graphene"]
authors = [
    {name = "Jayden Windle", email = "jaydenwindle@gmail.com"},
    {name = "John Pendenque", email = "pendenquejohn@gmail.com"}
]
maintainers = [
    {name = "John Pendenque", email = "pendenquejohn@gmail.com"}
]
classifiers = [
    'Environment :: Web Environment',
    'Framework :: Django',
    'Framework :: Django :: 5',
    'Framework :: Django :: 6',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.14',
    'Programming Language :: Python :: 3.15',
    'Topic :: Internet :: WWW/HTTP',
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
]

[project.urls]
homepage = "https://github.com/jaydenwindle/graphene-subscriptions"
documentation = "https://github.com/Zadigo/kryptone/wiki"
repository = "https://github.com/jaydenwindle/graphene-subscriptions"
changelog = "https://github.com/Zadigo/kryptone/blob/main/CHANGELOG.md"

[tool.poetry]


[tool.poetry.dependencies]
python = ">=3.14,<4"
django = ">=6.0.0"
channels = "^4.3.0"
graphene-django = "^3.2.3"
reactivex = "^4.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-asyncio = "^1.3.0"
pytest-django = "^4.10.0"
pytest-emoji = "^0.2.0"
twine = "^6.0.0"
tox = "^4.40.0"

[build-system]
# "setuptools", "setuptools-scm"
requires = ["poetry>=2.3.0"]
build-backend = "poetry.masonry.api"
# build-backend = "setuptools.build_meta"
